--- a/CLIENT/src/styles.scss
+++ b/CLIENT/src/styles.scss
@@ -39,13 +39,13 @@ a {
 
 // Table component
 
-.p-dialog-content > div.row {
+.p-dialog-content  div.row {
   display: block;
   margin-right: 0;
   margin-bottom: 1rem;
 }
 
-.p-dialog-content > div.row > label {
+.p-dialog-content  div.row > label {
   font-weight: bold;
 }
 
