Change: base for angular

--- a/CLIENT/src/app/pages/category/program/program.component.html
+++ b/CLIENT/src/app/pages/category/program/program.component.html
@@ -81,10 +81,11 @@
 
 <!--Dialog-->
 <p-dialog header="{{isView ? '' : isEdit ? 'Update' : 'Create'}} Province {{isView ? 'Detail' : ''}}" styleClass="p-dialog-sm p-dialog-modal" [modal]="true" [(visible)]="visible">
-  <form #tableForm="ngForm" (ngSubmit)="saveData()" autocomplete="off">
+  <form [formGroup]="formGroup" #programForm="ngForm" (ngSubmit)="saveData()" autocomplete="off">
     <div class="row">
       <label for="name" class="col-md-4">Name</label>
-      <input pInputText id="name" [(ngModel)]="model.name" name="name" class="col-md-8" [readOnly]="isView"  />
+      <input pInputText id="name" [formControl]="formGroup.controls.name" name="name" class="col-md-8" [readOnly]="isView"  />
+      <small *ngIf="formGroup.get('name')?.invalid && formGroup.get('name')?.touched" class="mt-2 form-group-validator">Name is required.</small>
     </div>
 
     <div class="d-flex justify-content-end gap-2">
